# PFNs

./: .flake8  .gitignore  .pre-commit-config.yaml  Cointhrowing_converging_to_wrong_posterior.ipynb  GP_fitting_a_step.ipynb  Getting_Started_With_PFNs.ipynb  LICENSE  README.md  TRAINING_CLI_README.md  Tiny_MLP_Generalization.ipynb  Tutorial_Training_for_BO.ipynb  discrete_bayes.ipynb  example_config.py  formula_prior.ipynb  pyproject.toml  test_samples_affect_output_with_styles.ipynb
.github/workflows/: lint.yml  test.yml
pfns/: bar_distribution.py  base_config.py  batch_shape_sampler.py  config.json  decoders.py  encoders.py  initializers.py  layer.py  optimizer.py  pfn_bo_bayesmark.py  positional_encodings.py  run_training_cli.py  train.py  training_utils.py  transformer.py  utils.py
pfns/datasets/: tabular_datasets.py  utils.py
pfns/model/: bar_distribution.py  criterions.py  encoders.py  layer.py  layer_norm.py  mlp.py  multi_head_attention.py  save_peak_memory.py  transformer.py  transformer_config.py
pfns/optimizer/: __init__.py  adamw_schedulefree.py  config.py
pfns/priors/: __init__.py  batch_shape_samplers.py  batched_discrete_bayes.py  condition_on_area_of_opt.py  condition_on_area_of_opt_continuous.py  data_loading.py  fast_gp.py  gp.py  hebo_prior.py  hyperparameter_sampling.py  input_warping.py  nonmyopic_bo.py  normalize_with_style.py  prior.py  prior_bag.py  sample_num_features.py  simple_mlp.py  utils.py
pfns/priors/formula/: __init__.py  get_batch.py  ops.py  trees.py  utils.py
pfns/scripts/: acquisition_functions.py  model_builder.py  tabpfn_interface.py  tabpfn_model_builder.py  tabular_metrics.py  transformer_prediction_interface.py  tune_input_warping.py
tests/model/: test_attention.py  test_bar_distribution.py  test_transformer.py
tests/priors/: test_hyperparameter_sampling.py
